refactor: Rename project and update metadata
- Renamed the project to "Hygiène - La Oncé" in package.json and index.html.
- Updated metadata.json with the new name and description.
- Modified constants.ts and other related files for consistency.
- Adjusted some default checklist item labels for brevity.
- Added basic Tailwind styles for scrollbars in index.html.
- Included Gemini AI service and Dashboard component for future enhancements.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HACCP Pro - Registre Digital</title>
+    <title>Hygiène - La Oncé</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,8 +12,13 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #f9fafb;
+            background-color: #f8fafc;
+            -webkit-tap-highlight-color: transparent;
         }
+        /* Custom scrollbar for a cleaner look */
+        ::-webkit-scrollbar { width: 6px; }
+        ::-webkit-scrollbar-track { background: transparent; }
+        ::-webkit-scrollbar-thumb { background: #e2e8f0; border-radius: 10px; }
     </style>
 <script type="importmap">
 {
@@ -29,10 +34,8 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <div id="root"></div>
-<script type="module" src="/index.tsx"></script>
 </body>
 </html>
