fix: Handle Vercel environment and Supabase fallback
Introduces a polyfill for `process.env` to resolve "process is not defined" errors on Vercel. Also implements a fallback mechanism using localStorage for critical data when Supabase is unavailable, ensuring data persistence and application stability. Removes unused authentication logic.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hygiène - La Oncé</title>
+    <script>
+        // Ce script définit l'objet process avant que les modules ne se chargent
+        // pour éviter le crash "process is not defined" sur Vercel
+        window.process = { 
+            env: { 
+                NODE_ENV: 'production'
+            } 
+        };
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +24,6 @@
             background-color: #f8fafc;
             -webkit-tap-highlight-color: transparent;
         }
-        /* Custom scrollbar for a cleaner look */
         ::-webkit-scrollbar { width: 6px; }
         ::-webkit-scrollbar-track { background: transparent; }
         ::-webkit-scrollbar-thumb { background: #e2e8f0; border-radius: 10px; }
