fix: Improve process polyfill and env variable access
Enhance the `process` polyfill in `index.html` for better robustness and browser compatibility. Refactor `supabaseClient.ts` to use a safer, unified function for accessing environment variables, ensuring it works correctly in both Node.js-like environments and browser contexts where `process` might not be globally defined.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hygiène - La Oncé</title>
     <script>
-        // Polyfill robuste pour l'objet process
-        // Cela permet à process.env.API_KEY de ne pas générer de ReferenceError
-        window.process = window.process || {};
-        window.process.env = window.process.env || {};
-        if (!window.process.env.NODE_ENV) {
-            window.process.env.NODE_ENV = 'production';
-        }
+        // Polyfill global immédiat pour éviter ReferenceError: process is not defined
+        (function() {
+            var p = { 
+                env: { NODE_ENV: 'production' },
+                platform: 'browser',
+                nextTick: function(f) { setTimeout(f, 0); }
+            };
+            window.process = p;
+            if (typeof globalThis !== 'undefined') globalThis.process = p;
+        })();
     </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
